2003-11-03  Braden McDaniel  <braden@endoframe.com>

	* openvrml.spec.in:  Removed lookat-bin from lookat package.
	Added mozilla requirement for lookat.  lookat is now built with
	-rpath for the Mozilla library directory; so the binary package
	requires the same Mozilla version it was built against.

2003-11-03  Braden McDaniel  <braden@endoframe.com>

	Build executables with -rpath instead of setting
	LD_LIBRARY_PATH.

	* configure.ac
	* src/lookat/Makefile.am
	* src/lookat/lookat.in:  Removed file.
	* test/Makefile.am

2003-11-02  Braden McDaniel  <braden@endoframe.com>

	Removed viewer::scale_texture.  Instead, do any texture
	rescaling in the implementation of viewer::insert_texture.

	* src/libopenvrml/openvrml/img.cpp
	* src/libopenvrml/openvrml/img.h
	* src/libopenvrml/openvrml/viewer.cpp
	* src/libopenvrml/openvrml/viewer.h
	* src/libopenvrml/openvrml/vrml97node.cpp
	* src/libopenvrml-gl/openvrml/gl/viewer.cpp
	* src/libopenvrml-gl/openvrml/gl/viewer.h

2003-11-02  Braden McDaniel  <braden@endoframe.com>

	* configure.ac:  Don't optionally generate Makefiles--that
	screws up make.

2003-10-31  Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml/openvrml/img.cpp (img::img):  Initialize
	img::nframes_ to 0. (Fixes crash on exit.)

2003-10-31  Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml/openvrml/browser.cpp:  Don't render root nodes
	that aren't child nodes.

2003-10-27  Braden McDaniel  <braden@endoframe.com>

	Launch lookat with a shell script to set LD_LIBRARY_PATH
	appropriately.

	* configure.ac:  Generate lookat shell script.
	* openvrml.spec.in:  Added lookat-bin to lookat package.
	* src/lookat/Makefile.am:  Changed binary executable from
	"lookat" to "lookat-bin".  "lookat" is now a shell script.
	* src/lookat/lookat.in:  Added file.

2003-10-26  Braden McDaniel  <braden@endoframe.com>

	Added the beginning of a test suite.

	* Makefile.am:  Added "test" subdirectory.
	* configure.ac:  Substitute GRE_PATH variable.